# finance-tracker-be

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_balance_account_currency.py
categories/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_remove_category_icon.py
common/: models.py
currencies/: admin.py  constants.py  models.py  tasks.py  urls.py  views.py
currencies/migrations/: 0001_initial.py  0002_currency_type.py
finance_tracker/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
finance_tracker/scripts/: get_coingecko_currencies.py  get_coingecko_tokens.py  update_active_currencies.py
finance_tracker/settings/: __init__.py  auth.py  custom.py  databases.py  databases_settings.py  develop.py  django.py  django_settings.py  integrations.py  logging.py  logging_settings.py  redis_celery.py
finance_tracker/urls/: __init__.py  develop.py  swagger.py
health_check/: serializers.py  urls.py  views.py
integrations/coingecko/: cg_client.py
scripts/: start.sh
stats/: urls.py  views.py
transactions/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_transaction_category_transaction_type.py  0003_transaction_date.py  0004_alter_transaction_account_alter_transaction_category.py  0005_alter_transaction_options.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
