[project]
name = "finance-tracker-be"
version = "0.1.0"
description = "Backend application for the finance tracker project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.2",
    "celery-once>=3.0.1",
    "django>=5.1.7",
    "django-celery-beat>=2.8.0",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "djoser>=2.3.1",
    "flower>=2.0.1",
    "psycopg2-binary>=2.9.10",
    "pycoingecko>=3.2.0",
    "redis>=6.0.0",
]

[dependency-groups]
dev = [
    "django-silk>=5.3.2",
    "drf-spectacular>=0.28.0",
    "nplusone>=1.0.0",
    "pre-commit>=4.2.0",
]
